# NIGHTINDEX

./: .gitignore  Cargo.toml  PLAN.md  README.md
scripts/: bench_archive_compare.sh  release_check.sh
src/: archive_compare.rs  binary_diff.rs  copy_exec.rs  main.rs
