[package]
name = "nightindex"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nightindex"
path = "src/main.rs"

[[bin]]
name = "ndex"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
serde_yaml = "0.9"
walkdir = "2.5"
